istio/lab-otros.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-legacy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-client
  namespace: istio-legacy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legacy-client
  template:
    metadata:
      labels:
        app: legacy-client
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: legacy-client
      containers:
        - name: curl
          image: curlimages/curl:8.8.0
          command: ["/bin/sh", "-c"]
          args:
            - sleep 365d
